[project]
name = "adhd-mcp"
version = "0.0.1"
description = "ADHD Framework MCP: adhd_mcp"
requires-python = ">=3.11"
dependencies = [
    "logger-util",
    "config-manager",
    "yaml-reading-core",
    "modules-controller-core",
    "module-creator-core",
    "github-api-core",
    "creator-common-core",
    "exceptions-core",
    "mcp>=1.1.0",
]

[project.urls]
Repository = "https://github.com/AI-Driven-Highspeed-Development/adhd_mcp.git"

[tool.adhd]
type = "mcp"
layer = "dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
dev-mode-dirs = [".."]
