[project]
name = "adhd-mcp"
version = "0.0.1"
description = "ADHD Framework MCP: adhd_mcp"
requires-python = ">=3.11"
dependencies = [
    "logger-util",
    "config-manager",
    "yaml-reading-core",
    "modules-controller-core",
    "module-creator-core",
    "github-api-core",
    "creator-common-core",
    "exceptions-core",
    "mcp>=1.1.0",
]

[project.urls]
Repository = "https://github.com/AI-Driven-Highspeed-Development/adhd_mcp.git"

[tool.adhd]
type = "mcp"
layer = "dev"

[tool.uv.sources]
logger-util = { git = "https://github.com/AI-Driven-Highspeed-Development/Logger-Util.git" }
config-manager = { git = "https://github.com/AI-Driven-Highspeed-Development/config-manager.git" }
yaml-reading-core = { git = "https://github.com/AI-Driven-Highspeed-Development/yaml_reading_core.git" }
modules-controller-core = { git = "https://github.com/AI-Driven-Highspeed-Development/modules_controller_core.git" }
module-creator-core = { git = "https://github.com/AI-Driven-Highspeed-Development/module_creator_core.git" }
github-api-core = { git = "https://github.com/AI-Driven-Highspeed-Development/github_api_core.git" }
creator-common-core = { git = "https://github.com/AI-Driven-Highspeed-Development/creator_common_core.git" }
exceptions-core = { git = "https://github.com/AI-Driven-Highspeed-Development/exceptions_core.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
dev-mode-dirs = [".."]
